<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    tools:context=".game.organization.find.FindGameActivity">

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/comeBack"
        android:src="@drawable/ret" />

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/refresh"
        android:src="@drawable/reload" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/text"
        android:textColor="@color/text"
        app:layout_constraintStart_toEndOf="@+id/refreshButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/openGamesList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="56dp"
        android:layout_below="@+id/searchView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />


    <ImageButton
        android:id="@+id/previousPageButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/previousPage"
        android:src="@drawable/left" />


    <TextView
        android:id="@+id/pageNumber"
        android:layout_width="299dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/defaultPage"
        android:textColor="@color/text"
        android:textSize="28sp" />

    <ImageButton
        android:id="@+id/nextPageButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/nexPage"
        android:src="@drawable/right" />


    <include
        android:id="@+id/loadingView"
        layout="@layout/loading"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
</RelativeLayout>