<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="horizontal"
    android:screenOrientation="landscape"
    tools:context=".game.play.PlayGameActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/comeBack"
        android:src="@drawable/ret"
        app:layout_constraintBottom_toTopOf="@+id/stopButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/stopButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/stop"
        android:src="@drawable/down"
        app:layout_constraintBottom_toTopOf="@+id/playerCards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnButton" />

    <ImageView
        android:id="@+id/playerCard"
        android:layout_width="62dp"
        android:layout_height="95dp"
        android:src="@drawable/card10c"
        app:layout_constraintBottom_toTopOf="@+id/playerCards"
        app:layout_constraintEnd_toStartOf="@+id/enemyCard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/trump"
        app:layout_constraintTop_toBottomOf="@+id/enemyCards" />

    <ImageView
        android:id="@+id/enemyCard"
        android:layout_width="62dp"
        android:layout_height="95dp"
        android:src="@drawable/card10c"
        app:layout_constraintBottom_toTopOf="@+id/playerCards"
        app:layout_constraintEnd_toStartOf="@+id/stopButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playerCard"
        app:layout_constraintTop_toBottomOf="@+id/enemyCards" />

    <ImageView
        android:id="@+id/trump"
        android:layout_width="62dp"
        android:layout_height="95dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/card10c"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/cards"
        android:layout_width="107dp"
        android:layout_height="34dp"
        android:text="@string/defaultCardsNumber"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/enemyCards"
        app:layout_constraintEnd_toStartOf="@+id/returnButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/trump"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enemyCards"
        android:layout_width="190dp"
        android:layout_height="34dp"
        android:text="@string/defaultEnemyCardsNumber"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/playerCard"
        app:layout_constraintEnd_toStartOf="@+id/returnButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/trump"
        app:layout_constraintTop_toBottomOf="@+id/cards" />

    <org.lucasr.twowayview.TwoWayView
        android:id="@+id/playerCards"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/TwoWayView"
        android:drawSelectorOnTop="false"
        tools:context=".game.play.PlayGameActivity"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintBottom_creator="1" />

    <include
        layout="@layout/loading"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

</android.support.constraint.ConstraintLayout>
